// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Quantum shogi can finish when all other pieces has been captured once 1`] = `
ban:
(1) 
0fg________________________
___1ff1ff__________________
___________________________
___________________________
___________________________
___________________________
___0ff0ff0ff0ff0ff0ff0ff0ff
___0ff_______________0ff___
0ff0ff0ff0ff0ff0ff0ff0ff0ff
(0) ff18 
kifu:
☗9三量子成 [0,[9,3,[1,"ff"],[0,"fg"]],[9,7,[0,"ff"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗8三成量子 [0,[8,3,[1,"ff"],[0,"fg"]],[9,3,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗7三成量子 [0,[7,3,[1,"ff"],[0,"fg"]],[8,3,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗6三成量子 [0,[6,3,[1,"ff"],[0,"fg"]],[7,3,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗5三成量子 [0,[5,3,[1,"ff"],[0,"fg"]],[6,3,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗4三成量子 [0,[4,3,[1,"ff"],[0,"fg"]],[5,3,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗3三成量子 [0,[3,3,[1,"ff"],[0,"fg"]],[4,3,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗2三成量子 [0,[2,3,[1,"ff"],[0,"fg"]],[3,3,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗1三成量子 [0,[1,3,[1,"ff"],[0,"fg"]],[2,3,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗2二成量子 [0,[2,2,[1,"ff"],[0,"fg"]],[1,3,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗1一成量子 [0,[1,1,[1,"ff"],[0,"fg"]],[2,2,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗2一成量子 [0,[2,1,[1,"ff"],[0,"fg"]],[1,1,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗3一成量子 [0,[3,1,[1,"ff"],[0,"fg"]],[2,1,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗4一成量子 [0,[4,1,[1,"ff"],[0,"fg"]],[3,1,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗5一成量子 [0,[5,1,[1,"ff"],[0,"fg"]],[4,1,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗6一成量子 [0,[6,1,[1,"ff"],[0,"fg"]],[5,1,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗7一成量子 [0,[7,1,[1,"ff"],[0,"fg"]],[6,1,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗9一量子 [0,[9,1,[],[0,"ff"]],[-1,0,"ff"]]
☖同量子 [1,[9,1,[0,"ff"],[1,"ff"]],[9,2,[1,"ff"],[]],[1,1,"ff"]]
☗8一成量子 [0,[8,1,[1,"ff"],[0,"fg"]],[7,1,[0,"fg"],[]],[1,0,"ff"]]
☖7一量子打 [1,[7,1,[],[1,"ff"]],[-1,1,"ff"]]
☗9一成量子 [0,[9,1,[1,"ff"],[0,"fg"]],[8,1,[0,"fg"],[]],[1,0,"ff"]]
☖7二量子 [1,[7,2,[],[1,"ff"]],[7,1,[1,"ff"],[]]]
{
  "version": "0.0",
  "status": {
    "num": 1
  },
  "ruleid": 108,
  "teban": 0,
  "turn": 0,
  "date": {},
  "moving": null,
  "debug": ""
}
`;

exports[`Quantum shogi can finish when everything is taken 1`] = `
ban:
(1) 
1ff________________________
_________0fg_______________
___________________________
___________________________
___________________________
___________________________
___0ff0ff0ff0ff0ff0ff0ff0ff
___0ff_______________0ff___
0ff0ff0ff0ff0ff0ff0ff0ff0ff
(0) ff19 
kifu:
☗9三量子成 [0,[9,3,[1,"ff"],[0,"fg"]],[9,7,[0,"ff"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗8三成量子 [0,[8,3,[1,"ff"],[0,"fg"]],[9,3,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗8二成量子 [0,[8,2,[1,"ff"],[0,"fg"]],[8,3,[0,"fg"],[]],[1,0,"ff"]]
☖6二量子 [1,[6,2,[],[1,"ff"]],[6,1,[1,"ff"],[]]]
☗8一成量子 [0,[8,1,[1,"ff"],[0,"fg"]],[8,2,[0,"fg"],[]],[1,0,"ff"]]
☖7二量子 [1,[7,2,[],[1,"ff"]],[7,1,[1,"ff"],[]]]
☗同成量子 [0,[7,2,[1,"ff"],[0,"fg"]],[8,1,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗7三成量子 [0,[7,3,[1,"ff"],[0,"fg"]],[7,2,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗6三成量子 [0,[6,3,[1,"ff"],[0,"fg"]],[7,3,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗5三成量子 [0,[5,3,[1,"ff"],[0,"fg"]],[6,3,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗4三成量子 [0,[4,3,[1,"ff"],[0,"fg"]],[5,3,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗3三成量子 [0,[3,3,[1,"ff"],[0,"fg"]],[4,3,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗2三成量子 [0,[2,3,[1,"ff"],[0,"fg"]],[3,3,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗1三成量子 [0,[1,3,[1,"ff"],[0,"fg"]],[2,3,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗1一成量子 [0,[1,1,[1,"ff"],[0,"fg"]],[1,3,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗2二成量子 [0,[2,2,[1,"ff"],[0,"fg"]],[1,1,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗2一成量子 [0,[2,1,[1,"ff"],[0,"fg"]],[2,2,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗3一成量子 [0,[3,1,[1,"ff"],[0,"fg"]],[2,1,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗4一成量子 [0,[4,1,[1,"ff"],[0,"fg"]],[3,1,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗5一成量子 [0,[5,1,[1,"ff"],[0,"fg"]],[4,1,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗6二成量子 [0,[6,2,[1,"ff"],[0,"fg"]],[5,1,[0,"fg"],[]],[1,0,"ff"]]
{
  "version": "0.0",
  "status": {
    "num": 1
  },
  "ruleid": 108,
  "teban": 1,
  "turn": 0,
  "date": {},
  "moving": null,
  "debug": ""
}
`;

exports[`Quantum shogi can finish when everything is taken 2`] = `
ban:
(1) 
___________________________
1ff______0fg_______________
___________________________
___________________________
___________________________
___________________________
___0ff0ff0ff0ff0ff0ff0ff0ff
___0ff_______________0ff___
0ff0ff0ff0ff0ff0ff0ff0ff0ff
(0) ff19 
kifu:
☗9三量子成 [0,[9,3,[1,"ff"],[0,"fg"]],[9,7,[0,"ff"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗8三成量子 [0,[8,3,[1,"ff"],[0,"fg"]],[9,3,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗8二成量子 [0,[8,2,[1,"ff"],[0,"fg"]],[8,3,[0,"fg"],[]],[1,0,"ff"]]
☖6二量子 [1,[6,2,[],[1,"ff"]],[6,1,[1,"ff"],[]]]
☗8一成量子 [0,[8,1,[1,"ff"],[0,"fg"]],[8,2,[0,"fg"],[]],[1,0,"ff"]]
☖7二量子 [1,[7,2,[],[1,"ff"]],[7,1,[1,"ff"],[]]]
☗同成量子 [0,[7,2,[1,"ff"],[0,"fg"]],[8,1,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗7三成量子 [0,[7,3,[1,"ff"],[0,"fg"]],[7,2,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗6三成量子 [0,[6,3,[1,"ff"],[0,"fg"]],[7,3,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗5三成量子 [0,[5,3,[1,"ff"],[0,"fg"]],[6,3,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗4三成量子 [0,[4,3,[1,"ff"],[0,"fg"]],[5,3,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗3三成量子 [0,[3,3,[1,"ff"],[0,"fg"]],[4,3,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗2三成量子 [0,[2,3,[1,"ff"],[0,"fg"]],[3,3,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗1三成量子 [0,[1,3,[1,"ff"],[0,"fg"]],[2,3,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗1一成量子 [0,[1,1,[1,"ff"],[0,"fg"]],[1,3,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗2二成量子 [0,[2,2,[1,"ff"],[0,"fg"]],[1,1,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗2一成量子 [0,[2,1,[1,"ff"],[0,"fg"]],[2,2,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗3一成量子 [0,[3,1,[1,"ff"],[0,"fg"]],[2,1,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗4一成量子 [0,[4,1,[1,"ff"],[0,"fg"]],[3,1,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗5一成量子 [0,[5,1,[1,"ff"],[0,"fg"]],[4,1,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗6二成量子 [0,[6,2,[1,"ff"],[0,"fg"]],[5,1,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
{
  "version": "0.0",
  "status": {
    "num": 1
  },
  "ruleid": 108,
  "teban": 0,
  "turn": 0,
  "date": {},
  "moving": null,
  "debug": ""
}
`;

exports[`Quantum shogi can finish when everything is taken 3`] = `
ban:
(1) 
___________________________
0fg________________________
___________________________
___________________________
___________________________
___________________________
___0ff0ff0ff0ff0ff0ff0ff0ff
___0ff_______________0ff___
0ff0ff0ff0ff0ff0ff0ff0ff0ff
(0) ff20 
kifu:
☗9三量子成 [0,[9,3,[1,"ff"],[0,"fg"]],[9,7,[0,"ff"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗8三成量子 [0,[8,3,[1,"ff"],[0,"fg"]],[9,3,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗8二成量子 [0,[8,2,[1,"ff"],[0,"fg"]],[8,3,[0,"fg"],[]],[1,0,"ff"]]
☖6二量子 [1,[6,2,[],[1,"ff"]],[6,1,[1,"ff"],[]]]
☗8一成量子 [0,[8,1,[1,"ff"],[0,"fg"]],[8,2,[0,"fg"],[]],[1,0,"ff"]]
☖7二量子 [1,[7,2,[],[1,"ff"]],[7,1,[1,"ff"],[]]]
☗同成量子 [0,[7,2,[1,"ff"],[0,"fg"]],[8,1,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗7三成量子 [0,[7,3,[1,"ff"],[0,"fg"]],[7,2,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗6三成量子 [0,[6,3,[1,"ff"],[0,"fg"]],[7,3,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗5三成量子 [0,[5,3,[1,"ff"],[0,"fg"]],[6,3,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗4三成量子 [0,[4,3,[1,"ff"],[0,"fg"]],[5,3,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗3三成量子 [0,[3,3,[1,"ff"],[0,"fg"]],[4,3,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗2三成量子 [0,[2,3,[1,"ff"],[0,"fg"]],[3,3,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗1三成量子 [0,[1,3,[1,"ff"],[0,"fg"]],[2,3,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗1一成量子 [0,[1,1,[1,"ff"],[0,"fg"]],[1,3,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗2二成量子 [0,[2,2,[1,"ff"],[0,"fg"]],[1,1,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗2一成量子 [0,[2,1,[1,"ff"],[0,"fg"]],[2,2,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗3一成量子 [0,[3,1,[1,"ff"],[0,"fg"]],[2,1,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗4一成量子 [0,[4,1,[1,"ff"],[0,"fg"]],[3,1,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗5一成量子 [0,[5,1,[1,"ff"],[0,"fg"]],[4,1,[0,"fg"],[]],[1,0,"ff"]]
☖9一量子 [1,[9,1,[],[1,"ff"]],[9,2,[1,"ff"],[]]]
☗6二成量子 [0,[6,2,[1,"ff"],[0,"fg"]],[5,1,[0,"fg"],[]],[1,0,"ff"]]
☖9二量子 [1,[9,2,[],[1,"ff"]],[9,1,[1,"ff"],[]]]
☗同成量子 [0,[9,2,[1,"ff"],[0,"fg"]],[6,2,[0,"fg"],[]],[1,0,"ff"]]
☗勝ち "_1"
{
  "version": "0.0",
  "status": {
    "num": 2,
    "message": "王に確定した駒を取りました"
  },
  "ruleid": 108,
  "teban": 1,
  "turn": 0,
  "date": {},
  "moving": null,
  "debug": ""
}
`;

exports[`Quantum shogi can move 1`] = `
ban:
(1) 
1ff1ff1ff1ff1ff1ff1ff1ff1ff
___1ff_______________1ff___
1ff1ff1ff1ff1ff1ff1ff1ff1ff
___________________________
_________0ff_______________
___________________________
0ff0ff___0ff0ff0ff0ff0ff0ff
___0ff_______________0ff___
0ff0ff0ff0ff0ff0ff0ff0ff0ff
(0) 
kifu:
☗6五量子 [0,[6,5,[],[0,"ff"]],[7,7,[0,"ff"],[]]]
{
  "version": "0.0",
  "status": {
    "num": 1
  },
  "ruleid": 108,
  "teban": 1,
  "turn": 0,
  "date": {},
  "moving": null,
  "debug": ""
}
`;

exports[`Quantum shogi can move 2`] = `
Array [
  Object {
    "XY": (7, 3),
    "type": 1,
  },
  Object {
    "XY": (5, 3),
    "type": 1,
  },
]
`;

exports[`Quantum shogi can put piece with id 1`] = `
Array [
  Object {
    "XY": (8, 7),
    "type": 1,
  },
]
`;

exports[`Quantum shogi can put piece with id 2`] = `
Array [
  Object {
    "XY": (9, 6),
    "type": 2,
  },
  Object {
    "XY": (9, 7),
    "type": 2,
  },
  Object {
    "XY": (9, 6),
    "type": 2,
  },
  Object {
    "XY": (9, 7),
    "type": 2,
  },
  Object {
    "XY": (8, 5),
    "type": 2,
  },
  Object {
    "XY": (7, 5),
    "type": 2,
  },
  Object {
    "XY": (6, 5),
    "type": 2,
  },
  Object {
    "XY": (9, 4),
    "type": 2,
  },
  Object {
    "XY": (9, 3),
    "type": 2,
  },
]
`;
